--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,14 @@
-<h1> Articles!</h1>
+<h1>Articles</h1>
+
+Our blog has <%= Article.public_count %> articles and counting!
+
 <ul>
-<% @articles.each do |article| %>
-    <li>
-    <a href= "/articles/<%= article.id %>">
-     <%= article.title %>
-     </a>
-     </li>
-<% end %>
+  <% @articles.each do |article| %>
+    <% unless article.archived? %>
+      <li>
+        <%= link_to article.title, category_article_path(article.category, article) %>
+      </li>
+    <% end %>
+  <% end %>
 </ul>
+<%= link_to "New Article", new_category_article_path(@category) %>
