--- a/app/assets/stylesheets/donations.css
+++ b/app/assets/stylesheets/donations.css
@@ -19,7 +19,7 @@ h1 {
 #donation-form .field label[for="donation_email"]{
     background-color: bisque;
 }
-
+/* 
 #donation-form .field label[for="donation_amount"]{
     background-color: bisque;
-}
+} */
