WIP: dynamic comment loading using js

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,7 @@
 </ul>
 
 <h2>Comments</h2>
+<button id="load-comments"> Load Comments </button>
 <%= render @article.comments %>
 
 <h2>Add a comment:</h2>
