Enhancing Blog app with JavaScript

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,3 +11,8 @@
     turbo_confirm: "Are you sure?"
   } %></li>
 </ul>
+
+=begin 
+<h2> Articles </h2>
+<% if @category.articles.any do |article| %>
+  
