--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,8 +13,10 @@
 </ul>
 
 <h2>Comments</h2>
-<button id="load-comments"> Load Comments </button>
-<%= render @article.comments %>
+<div id = "comments-container">
+<div id="category-id" data-category="<%= @category.id%>"> </div>
+<button id="load-comments" data-article "<%= @article.id%>"> Load Comments </button>
+
 
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
