--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,24 +1,25 @@
 <h1>Make a Donation</h1>
-<%= form_with(model: @donation, irl: donations_path,
+<%= form_with(model: @donation, url: donations_path,
 method: 'post', local: true, id: 'donation-form') do |form| %>
     <div class="field">
         <%= form.label :first_name %>
-        <%= form.text_area :first_name %>
+        <%= form.text_area :first_name, class: "form-control", required:true %>
     </div>
     <div class="field">
         <%= form.label :last_name %>
-        <%= form.text_area :last_name %>
+        <%= form.text_area :last_name, class: "form-control", required:true %>
     </div>
-    <div class="field">
+    <div class="form-group">
     <%= form.label :email %>
-    <%= form.text_area :email %>
+    <%= form.text_area :email, class: "form-control", required:true %>
     
     <div class="field">
-<%= form.label :amount %>
-<%= form.text_area :amount %>
-</div>  
+        <%= form.label :amount %>
+        <%= form.text_area :amount %>
+    </div>  
+
     <div id="card-container">
-    <div id = "card-element" class = "form-control">
+        <div id = "card-element" class = "form-control">
     </div>
     <div id="card-errors" role="alert"></div>
     </div>
