--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,17 @@
 <h1>Articles</h1>
 
 Our blog has <%= Article.public_count %> articles and counting!
+<h1>  Most recent articles. </h1>
+<ul>
+  <% @recent_articles.each do |article| %>
+      <li>
+        <%= link_to article.title, category_article_path(article.category, article) %>
+      </li>
+    <% end %>
+</ul>
 
+
+<h1> Other articles. </h1>
 <ul>
   <% @articles.each do |article| %>
     <% unless article.archived? %>
