--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,16 +1,24 @@
 <h1><%= @article.title %></h1>
+<div class= "articleContent"  style="border: gray solid 2px ">
 
-<p><%= @article.body %></p>
+  <p><%= @article.body %></p>
+  <p><strong>Category:</strong> <%= @article.category.name %></p>
 
-<p><strong>Category:</strong> <%= @article.category.name %></p>
+  <ul>
+    <li><%= link_to "Edit", edit_category_article_path(@category, @article) %></li>
+    <li><%= link_to "Delete", category_article_path(@category), data: {
+      turbo_method: :delete,
+      turbo_confirm: "Are you sure?"
+    } %></li>
+  </ul>
+</div>
 
-<ul>
-  <li><%= link_to "Edit", edit_category_article_path(@category, @article) %></li>
-  <li><%= link_to "Delete", category_article_path(@category), data: {
-    turbo_method: :delete,
-    turbo_confirm: "Are you sure?"
-  } %></li>
-</ul>
+<button class= "toggleContent" style="background-color: #4CAF50; border: none;color: white;
+padding: 10px 32px;
+border-radius: 5px;
+font-size: 16px;
+margin: 4px 2px;">Toggle Article Info</button>
+
 
 <h2>Comments</h2>
 <div id = "comments-container">
